@@ -1,6 +1,3 @@
-process.env.SPLITIO_EXT_API_KEY = 'test';
-process.env.SPLITIO_API_KEY = 'localhost';
-
 const { getSize, addImpression, getImpressionsToPost } = require('../impressionQueue');
 
 const impression1 = {
